Dia 2 - Criação da primeira section
*Primeira section adicionada
*Cabeçalho adaptado para mobile
*Adição deum menu "hambúrguer" no mobile

--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="py-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>OptimusTech</title>
-</head>
-<body>
-    <header class="cabecalho">
-        <div class="cabecalho-logo">
-            <img src="img/logo.svg" alt="Logo OptimusTech">
-            <h1 class="cabecalho-logo__titulo">OptimusTech</h1>
-        </div>
-        <ul class="cabecalho-lista">
-            <li class="lista__item"><a href="#" class="lista__item-link">Home</a> </li>
-            <li class="lista__item"><a href="#" class="lista__item-link">Produtos</a> </li>
-            <li class="lista__item"><a href="#" class="lista__item-link">Recursos</a> </li>
-            <li class="lista__item"><a href="#" class="lista__item-link">Sobre nós</a> </li>
-        </ul>
-        </div>
-        <div class="cabecalho-botoes">
-            <a href="#" class="cabecalho-botoes">Entrar</a>
-            <a href="#" class="cabecalho-botoes__cadastrar">Cadastrar</a>
-        </div>
-    </header>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles/reset.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/styles.css">
+        <title>OptimusTech</title>
+    </head>
+    <body>
+        <header class="cabecalho">
+            <div class="cabecalho-logo">
+                <input type="checkbox" id="menu" class="cabecalho-botao">
+                <label for="menu">
+                    <span class="cabecalho__menu-hamburguer cabecalho-imagem"></span>
+                    <img src="img/logo.svg" alt="Logo OptimusTech" class="cabecalho-imagem">
+                </label>
+                <h1 class="cabecalho-logo__titulo">OptimusTech</h1>
+                <ul class="lista-menu">
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Home</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Produtos</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Recursos</a></li>
+                    <li class="lista-menu__item"><a href="#" class="lista-menu__link">Sobre nós</a></li>
+                </ul>
+            </div>
+
+            <div class="cabecalho-opcoes">
+                <a href="#" class="cabecalho-opcoes">Entrar</a>
+                <a href="#" class="cabecalho-opcoes__cadastrar">Cadastrar</a>
+            </div>
+        </header>
+
+        <section class="container-sobrenos">
+            <h1 class="sobrenos__titulo">Sobre nós</h1>
+            <p class="sobrenos__descricao"><span>Por que somos diferentes?</span></p>
+            <p class="sobrenos__paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </section>
+    </body>
 </html>
