Dia 4 - Vagas abertas
*Adição da seção vagas
*Adaptação com flexbox para mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="py-BR">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,10 +34,40 @@
             </div>
         </header>
 
-        <section class="container-sobrenos">
-            <h1 class="sobrenos__titulo">Sobre nós</h1>
-            <p class="sobrenos__descricao"><span>Por que somos diferentes?</span></p>
-            <p class="sobrenos__paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        <section class="container-banner">
+            <h1 class="container__titulo">Sobre nós</h1>
+            <p class="container__descricao"><span>Por que somos diferentes?</span></p>
+            <p class="container__paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </section>
+
+        <section class="container-metricas">
+            <div class="metricas__colunas metrica-1">
+                <p class="metricas__valor"><span>400+</span></p>
+                <h2 class="metricas__titulo">Projetos concluídos</h2>
+                <p class="metricas__descricao">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            </div>
+            <div class="metricas__colunas metrica-2">
+                <p class="metricas__valor"><span>100+</span></p>
+                <h2 class="metricas__titulo">Colaboradores</h2>
+                <p class="metricas__descricao">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+            </div>
+            <div class="metricas__colunas metrica-3">
+                <p class="metricas__valor"><span>20k</span></p>
+                <h2 class="metricas__titulo">Downloads</h2>
+                <p class="metricas__descricao">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+            </div>
+            <div class="metricas__colunas metrica-4">
+                <p class="metricas__valor"><span>500+</span></p>
+                <h2 class="metricas__titulo">Reviews 5 estrelas</h2>
+                <p class="metricas__descricao">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+            </div>
+        </section>
+
+        <section class="container-vagas">
+            <h1 class="container__titulo vagas__titulo">Vagas abertas!</h1>
+            <p class="container__descricao"><span>Estamos procurando por talentos</span></p>
+            <p class="container__paragrafo">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+            <img src="img/vagas.svg" alt="Imagem pessoas na mesa" class="container__imagem">
         </section>
     </body>
 </html>
