Dia 6 - Descrição das vagas  e Depoimento
*Adição da descrição das vagas
*Adição do depoimento
*Adaptação mobile

--- a/index.html
+++ b/index.html
@@ -65,9 +65,58 @@
 
         <section class="container-vagas">
             <h1 class="container__titulo vagas__titulo">Vagas abertas!</h1>
-            <p class="container__descricao"><span>Estamos procurando por talentos</span></p>
+            <p class="container__descricao descricao__vaga"><span>Estamos procurando por talentos</span></p>
             <p class="container__paragrafo">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
             <img src="img/vagas.svg" alt="Imagem pessoas na mesa" class="container__imagem">
+        </section>
+
+        <section class="container-formulario">
+            <h2 class="vaga__area">Design</h2>
+            <div class="formulario__vaga">
+                <span class="vaga__titulo">Product Designer</span>
+                <div class="vaga__informacoes">
+                  <span>Full-time</span>
+                  <span>Faixa salarial: R$6.000</span>
+                </div>
+            </div>
+            <div class="formulario__vaga">
+                <span class="vaga__titulo">UX Designer</span>
+                <div class="vaga__informacoes">
+                  <span>Full-time</span>
+                  <span>Faixa salarial: R$6.000</span>
+                </div>
+            </div>
+
+            <h2 class="vaga__area">Desenvolvimento de Software</h2>
+            <div class="formulario__vaga">
+                <span class="vaga__titulo">Desenvolvedor(a) iOS</span>
+                <div class="vaga__informacoes">
+                  <span>Full-time</span>
+                  <span>Faixa salarial: R$8.000</span>
+                </div>
+            </div>
+            <div class="formulario__vaga">
+                <span class="vaga__titulo">Desenvolvedor(a) Front-end</span>
+                <div class="vaga__informacoes">
+                  <span>Full-time</span>
+                  <span>Faixa salarial: R$7.000</span>
+                </div>
+            </div>
+            <div class="formulario__vaga">
+                <span class="vaga__titulo">Desenvolvedor(a) Back-end</span>
+                <div class="vaga__informacoes">
+                  <span>Full-time</span>
+                  <span>Faixa salarial: R$8.000</span>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-depoimento">
+            <h1 class="depoimento__titulo">Veja o que nossos colaboradores falam sobre nós</h1>
+            <p class="descricao__depoimento"><span>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</span></p>
+            <img src="img/Avatar.svg" alt="Imagem pessoas na mesa" class="imagem__depoimento">
+            <p class="imagem__nome">Júlia Castro</p>
+            <p class="imagem__cargo">Desenvolvedora Web</p>
         </section>
     </body>
 </html>
