Dia 7 - Finalização da pagina
*Adição do rodapé

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="cabecalho-opcoes">
                 <a href="#" class="cabecalho-opcoes">Entrar</a>
-                <a href="#" class="cabecalho-opcoes__cadastrar">Cadastrar</a>
+                <a href="#" class="opcoes__cadastrar">Cadastrar</a>
             </div>
         </header>
 
@@ -65,7 +65,7 @@
 
         <section class="container-vagas">
             <h1 class="container__titulo vagas__titulo">Vagas abertas!</h1>
-            <p class="container__descricao descricao__vaga"><span>Estamos procurando por talentos</span></p>
+            <p class="container__descricao descricao__paragrafo"><span>Estamos procurando por talentos</span></p>
             <p class="container__paragrafo">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
             <img src="img/vagas.svg" alt="Imagem pessoas na mesa" class="container__imagem">
         </section>
@@ -118,5 +118,13 @@
             <p class="imagem__nome">Júlia Castro</p>
             <p class="imagem__cargo">Desenvolvedora Web</p>
         </section>
+
+        <footer class="rodape">
+            <p class="container__descricao descricao__paragrafo"><span>Acompanhe as nossas oportunidades</span></p>
+            <p class="container__paragrafo">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            <input type="email" name="email" class="rodape__email" placeholder="Seu email">
+            <label for="email" class=""><a href="#" class="opcoes__cadastrar rodape__botao">Cadastrar</a></label>
+            <p class="rodape__copyright">© 2022 OptimusTech. Todos os direitos reservados.</p>
+        </footer>
     </body>
 </html>
