--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <footer class="rodape">
             <p class="container__descricao descricao__paragrafo"><span>Acompanhe as nossas oportunidades</span></p>
             <p class="container__paragrafo">Seja o primeiro a saber quando novas vagas serão abertas!</p>
-            <input type="email" name="email" class="rodape__email" placeholder="Seu email">
+            <input type="email" name="email" class="rodape__email" required placeholder="Seu email">
             <label for="email" class=""><a href="#" class="opcoes__cadastrar rodape__botao">Cadastrar</a></label>
             <p class="rodape__copyright">© 2022 OptimusTech. Todos os direitos reservados.</p>
         </footer>
